<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitebg"
    tools:context=".ui.RegisterActivity">

    <!-- LOGO SUPERIOR: ANDROID -->
    <ImageView
        android:id="@+id/iv_android_logo"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_android"
        android:contentDescription="@string/logo_android"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- TEXTO "android" debajo del logo -->
    <TextView
        android:id="@+id/tv_android_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="android"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_android_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <!-- GUIDELINE: INICIO DEL FONDO AZUL-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_azul_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="340dp" />

    <!-- FONDO AZUL INFERIOR -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_blue_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/guideline_azul_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_top_bg">

            <ImageView
                android:id="@+id/iv_con_cuenta"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="110dp"
                android:src="@drawable/ic_con_cuenta"
                android:contentDescription="@string/logo_con_cuenta"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_ya_tienes_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/ya_tienes_cuenta"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_con_cuenta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_iniciar_sesion"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/white"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="25dp"
                app:layout_constraintTop_toBottomOf="@id/tv_ya_tienes_cuenta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- FORMULARIO DE REGISTRO MÁS PEQUEÑO -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_register_form"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="32dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_android_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:text="@string/registrarse"
                android:textColor="@color/blue_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Usuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_usuario"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/usuario"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Correo electrónico -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/email"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón registrarse centrado -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_registrarse"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/blue_primary"
                android:text="@string/registrarse"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="25dp"
                app:elevation="8dp"/>

            <TextView
                android:id="@+id/tvRegisterMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:visibility="gone"
                android:textColor="@color/success"
                app:layout_constraintTop_toBottomOf="@id/cv_register_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
